--- a/src/components/TestCompNavbar/styles.module.css
+++ b/src/components/TestCompNavbar/styles.module.css
@@ -1,17 +1,44 @@
-.container{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 5px;
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 5px;
 }
-.navbar{
-    background-color: #0d47a1;
-    padding: 10px 5px;
-    margin-top: 5px;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    width: fit-content;
-    justify-self: center;
+
+.navbar {
+  background-color: #0d47a1;
+  padding: 10px 14px;
+  margin-top: 5px;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  transition: 0.2s ease-in-out;
+}
+
+/* ------------------- */
+/* RESPONSIVE DESIGN */
+/* ------------------- */
+@media (max-width: 650px) {
+  .container {
+    padding: 0;
+  }
+
+  .navbar {
+    width: 100%;
+    margin-top: 0;
+    border-radius: 0;
+    background-color: #0e0d3f; /* Igual al Navbar principal */
+    padding: 12px 0;
+    gap: 20px;
+  }
+}
+
+/* Extra Small Devices */
+@media (max-width: 420px) {
+  .navbar {
+    padding: 10px 0;
+    gap: 15px;
+  }
 }
