--- a/src/pages/TestPage/styles.module.css
+++ b/src/pages/TestPage/styles.module.css
@@ -70,7 +70,7 @@
 
 .pageBtn {
   background: transparent;
-  border: 2px solid #2a26ff;
+  border: 2px solid #2e2d7c;
   padding: 7px 13px;
   border-radius: 6px;
   color: white;
